--- a/style.css
+++ b/style.css
@@ -1,12 +1,7 @@
 footer {
     background-color: rgb(246, 246, 246);
-    height: 20vh;
-    position: unset;
-    padding: 20px;
-    text-align: center;
-    font-size: x-large;
-}
-
-body {
-    background-color: black;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
 }
